# magics-contract

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  foundry.toml  package-lock.json  package.json  remappings.txt
crates/magics-common/: Cargo.toml
crates/magics-common/src/: domain.rs  ed25519.rs  error.rs  lib.rs  seal.rs
deployments/: 8453.json  devnet.json  mainnet.json
migrations/: deploy.ts
programs/agent-registry/: Cargo.toml
programs/agent-registry/src/: constants.rs  events.rs  lib.rs  state.rs
programs/agent-registry/src/instructions/: mod.rs  rotate_seal.rs  status.rs  summon.rs
programs/magics-router/: Cargo.toml
programs/magics-router/src/: constants.rs  events.rs  lib.rs  state.rs
programs/magics-router/src/instructions/: budget.rs  cast.rs  deposit.rs  mod.rs  withdraw.rs
programs/mock-yield/: Cargo.toml
programs/mock-yield/src/: lib.rs
programs/passive-yield/: Cargo.toml
programs/passive-yield/src/: lib.rs
programs/seal-vault/: Cargo.toml
programs/seal-vault/src/: constants.rs  events.rs  lib.rs  state.rs
programs/seal-vault/src/instructions/: initialize.rs  mint_seal.rs  mod.rs  revoke.rs  revoke_all.rs  verify.rs
script/: Deploy.s.sol  DeployStrategy.s.sol  Verify.s.sol
scripts/: record-deployment.ts
src/: AgentRegistry.sol  MagicsRouter.sol  SealVault.sol
src/interfaces/: IAgentRegistry.sol  IERC20.sol  IMagicsRouter.sol  ISealVault.sol  IStrategy.sol
src/libraries/: Errors.sol  SealLib.sol
src/mocks/: MockERC20.sol  MockYieldVault.sol
src/strategies/: PassiveYieldStrategy.sol
src/utils/: ECDSA.sol  EIP712.sol  Ownable.sol  ReentrancyGuard.sol  SafeTransferLib.sol
test/: AgentRegistry.t.sol  Base.t.sol  MagicsRouter.t.sol  PassiveYieldStrategy.t.sol  SealVault.t.sol
tests/: agent-registry.ts  helpers.ts  passive-yield.ts  router.ts  seal-vault.ts
