[workspace]
members = [
    "crates/magics-common",
    "programs/seal-vault",
    "programs/agent-registry",
    "programs/magics-router",
    "programs/mock-yield",
    "programs/passive-yield",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["the magics contributors"]
repository = "https://github.com/magics-codes/magics-contract-solana"

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
magics-common = { path = "crates/magics-common" }

# Programs export their account types + CPI helpers to siblings. Those deps are
# declared explicitly in each program with `features = ["cpi"]` so the
# dependency's own entrypoint (and its global allocator) are turned off — two
# live allocators won't link. Note: do NOT add `default-features = false` on a
# path dep that is also a workspace member; it keeps the entrypoint on.

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
