[package]
name = "magics-common"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Shared error catalogue, seal/cast types, and signature helpers for the magics Solana programs."

[dependencies]
anchor-lang = { workspace = true }

[features]
default = []
idl-build = ["anchor-lang/idl-build"]
