[package]
name = "agent-registry"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "The book of names — binds an owner, a strategy, and a seal into an agent."

[lib]
crate-type = ["cdylib", "lib"]
name = "agent_registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "magics-common/idl-build", "seal-vault/idl-build"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
magics-common = { workspace = true }
seal-vault = { workspace = true }
